Overriden the sendToClient methods in ChatClientHandler and ScrabbleClientHandler to include logging to the console